# ai-podcast

./: .env.example  README.md  pyproject.toml
voice_test/: __main__.py  cli.py  config.py  session.py
voice_test/audio/: capture.py  playback.py  resample.py
voice_test/providers/: __init__.py  base.py  google_gemini.py  hume_evi.py  openai_realtime.py  xai_grok.py
